# StandAloneLlmAgent

./: .gitignore  DESIGN.md  README.md  agent.bat  agent.sh  pyproject.toml  requirements.txt  settings.yaml
agent/: context.py  core.py  models.py  prompt.py
backends/: base.py  llamacpp.py  ollama.py
cli/: app.py
config/: settings.py
docs/: DESIGN.md  TECHNICAL.md  TEST_SPEC.md
scripts/: eval_agent.py
tests/: conftest.py  test_confirm.py  test_context.py  test_core.py  test_filesystem.py  test_integration.py  test_models.py  test_ollama.py  test_registry.py  test_search.py  test_settings.py  test_shell.py
tools/: __init__.py  builtin.py  filesystem.py  registry.py  search.py  shell.py
