[project]
name = "standalone-llm-agent"
version = "0.1.0"
description = "Fully offline LLM Agent"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "rich>=13",
    "pyyaml>=6",
    "pydantic>=2",
    "prompt_toolkit>=3.0",
]

[project.optional-dependencies]
llamacpp = ["llama-cpp-python>=0.3"]
dev = ["pytest>=8"]

[project.scripts]
agent = "cli.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: Ollama を必要とする結合テスト（ollama serve が必要）",
]
